=========
Changelog
=========

Version 4.8.6  (September 15, 2013)

- Updated TOC file for Patch 5.4
- Localizations updated: deDE, enUS
- Added support for Siege of Orgrimmar.

- Added quests:
	- Wailing Caverns: Disciples of Naralex (Horde)
	- Siege of Orgrimmar: Judgment of the Black Prince



Version 4.8.5  (July 30, 2013)

- Localizations updated: deDE, enUS

- Added quests:
	- Throne of Thunder: Requiem for a Queen
	- Throne of Thunder: Taming the Tempest
	- Throne of Thunder: Rocks Fall, People Die
	- Throne of Thunder: Eyes of the Thunder King
	- Throne of Thunder: Agony and Anima
	- Throne of Thunder: Something Foul is Afoot
	- Throne of Thunder: Zao'cho the Wicked



Version 4.8.4  (June 1, 2013)

- Updated TOC file for Patch 5.3
- Support for new Scenarios and Battleground.  No quests for them though.

- Added quests:
	- Ragefire Chasm: Animal Control
	- Ragefire Chasm: No Man Left Behind (Alliance)
	- Ragefire Chasm: No Orc Left Behind (Horde)
	- Ragefire Chasm: A New Enemy
	- Ragefire Chasm: The Dark Shaman
	- Scholomance: Aberrations of Bone
	- Mogu'shan Vaults: The Strength of One's Foes
	- Heart of Fear: The Strength of One's Foes
	- Terrace of the Endless Spring: The Strength of One's Foes
	- Terrace of the Endless Spring: Fear Itself
	- Throne of Thunder: Securing a Future (Alliance)
	- Throne of Thunder: Life Blood (Horde)
	- Throne of Thunder: Secrets of the First Empire
	- Throne of Thunder: Echoes of the Titans
	- Throne of Thunder: Heart of the Thunder King



Version 4.8.3 (March 10, 2013)

- Just updated TOC file for Patch 5.2 and added basic support for Throne of Thunder raid.  No new quests needed to be added.



Version 4.8.2 (January 12, 2013)

- Updated TOC file for Patch 5.1
- Localizations updated: deDE, enUS
- Added Scenario quests:
	- Arena of Annihilation: The Arena of Annihilation
	- Brewmoon Festival: The Kun-Lai Kicker
	- Greenstone Village: Volatile Greenstone Brew
	- Unga Ingoo: The Funky Monkey Brew