@@ -1,5 +1,5 @@
 ﻿## Title: Lib: AboutPanel
-## X-Curse-Packaged-Version: 1.6.0
+## X-Curse-Packaged-Version: 1.52
 ## X-Curse-Project-Name: LibAboutPanel
 ## X-Curse-Project-ID: libaboutpanel
 ## X-Curse-Repository-ID: wow/libaboutpanel/mainline
@@ -8,14 +8,14 @@
 
 ## Author: Ackis
 ## eMail: ackis AT shaw DOT ca
-##X-Author-Faction = Alliance
-##X-Author-Server = Thunderlord US
+##X-Author-Faction = Horde
+##X-Author-Server = Hyjal US
 ## X-Donate: http://www.curseforge.com/projects/libaboutpanel/#w_donations
 
-## Interface: 50001
-## Version: 1.6.0
+## Interface: 50300
+## Version: 1.52
 ## X-Revision: @project-revision@
-## X-Date: 2012-08-29T16:24:19Z
+## X-Date: 2013-05-22T01:19:36Z
 
 ## X-Category: Libraries
 ## X-Localizations: enUS
